# ray-tracer

./: CMakeLists.txt  README.md  cmake-variants.yaml
examples/: CMakeLists.txt
examples/DistantView/: CMakeLists.txt  main.cpp
examples/ImplicitFunction/: CMakeLists.txt  main.cpp
examples/RayTracingInOneWeekend/: CMakeLists.txt  main.cpp
include/: AABB.h  Ascii.h  BVH.h  Camera.h  CameraSettings.h  Hittable.h  Image.h  ImplicitShape.h  Instance.h  Material.h  Orientation.h  ProgressBar.h  Ray.h  RenderSettings.h  Shape.h  Sphere.h  Texture.h  Transform.h  Utility.h  Vec3.h  World.h
output-images/: Approximate Lambertian Reflection.ppm  Depth of Field.ppm  Final Scene.ppm  Metal and Lambertian Spheres.ppm  Normal Rendering.ppm  True Lambertian Reflection.ppm  ascii.ppm
src/: AABB.cpp  BVH.cpp  CMakeLists.txt  Camera.cpp  CheckerTexture.cpp  Image.cpp  ImageTexture.cpp  Lambertian.cpp  Metal.cpp  Sphere.cpp  World.cpp  main.cpp
src/ImplicitShape/: BoolOp.cpp  Box.cpp  BoxFrame.cpp  BoxRounded.cpp  CMakeLists.txt  Cylinder.cpp  ImplicitShape.cpp  Sphere.cpp  Torus.cpp
src/Material/: CMakeLists.txt  Dielectric.cpp  Metal.cpp
src/Texture/: CMakeLists.txt
tests/: CMakeLists.txt  test_script.sh
tests/ImageTest/: CMakeLists.txt  ImageTest.cpp  ImageTest.ppm  checksum.txt  golden_reference.ppm
tests/ImageTextureTest/: CMakeLists.txt  ImageTextureTest.cpp  checksum.txt  golden_reference.ppm
